[gd_scene load_steps=3 format=3 uid="uid://baqo1lsx1y8fn"]

[ext_resource type="Script" path="res://screens/lobby/lobby.gd" id="1_xv6ys"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bdwdd"]
properties/0/path = NodePath(".:disabled")
properties/0/spawn = false
properties/0/replication_mode = 2

[node name="Lobby" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_xv6ys")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LobbyIdContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/LobbyIdContainer"]
layout_mode = 2

[node name="LobbyIdLabel" type="Label" parent="VBoxContainer/LobbyIdContainer/HBoxContainer"]
layout_mode = 2
text = "Lobby ID: "

[node name="LobbyIdValue" type="Label" parent="VBoxContainer/LobbyIdContainer/HBoxContainer"]
layout_mode = 2
text = "12345"

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="VBoxContainer"]
_spawnable_scenes = PackedStringArray("res://ui/components/LobbyPlayer.tscn")
spawn_path = NodePath("../PlayerList")
spawn_limit = 6

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Leave" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Leave"

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Start"

[node name="Synchronizer" type="MultiplayerSynchronizer" parent="VBoxContainer/HBoxContainer/Start"]
replication_config = SubResource("SceneReplicationConfig_bdwdd")

[connection signal="button_up" from="VBoxContainer/HBoxContainer/Leave" to="." method="_on_leave_button_up"]
